--- a/Bike-Buddy/package.json
+++ b/Bike-Buddy/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "bike-buddy",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,13 +10,16 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/react-dom": "^18.2.4",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "styled-component": "^2.8.0",
+    "styled-components": "^6.0.0-rc.2",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
