--- a/Bike-Buddy/package.json
+++ b/Bike-Buddy/package.json
@@ -16,11 +16,13 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.2.4",
     "@types/react-fontawesome": "^1.6.5",
+    "@types/react-query": "^1.2.9",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "styled-component": "^2.8.0",
